WebCore:

2009-07-27  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Justin Garcia.

        createMarkup does not handle CSS properly
        https://bugs.webkit.org/show_bug.cgi?id=27660

        This patch isolates code that creates markup for styles in addStyleMarkup
        It also makes all presentational elements (u, s, strike, i, em, b, strong) special ancestor in createMarkup
        so that we can assume no text decoration style is passed to addStyleMarkup.

        * editing/markup.cpp:
        (WebCore::propertyMissingOrEqualToNone): Changed the first argument from CSSMutableStyleDecleration to CSSStyleDeclaration
        (WebCore::isElementPresentational): Used to be elementHasTextDecorationProperty, now supports presentational tags
        (WebCore::addStyleMarkup): Adds markup for style span and div
        (WebCore::createMarkup): Uses isElementPresentational and addStyleMarkup

LayoutTests:

2009-07-27  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Justin Garcia.

        createMarkup does not handle CSS properly
        https://bugs.webkit.org/show_bug.cgi?id=27660

        inline-style-after-indentoutdent tests whether the original inline style is preserved after outdentation
        immediately after indentation.

        * editing/deleting/pruning-after-merge-2.html: Replaced b that contains div with a div with font-weight
        * editing/execCommand/inline-style-after-indentoutdent-expected.txt: Added.
        * editing/execCommand/inline-style-after-indentoutdent.html: Added.
        * editing/execCommand/resources/inline-style-after-indentoutdent.js: Added.
        (testCreateMarkup):
        (shouldBeSameAfterCreateMarkup):
        * platform/mac/editing/deleting/delete-3857753-fix-expected.txt: extra i tag is added (still passes pixel tests)
        * platform/mac/editing/deleting/pruning-after-merge-2-expected.txt: extra div as explained above
        * platform/mac/editing/pasteboard/display-block-on-spans-expected.txt: bug 26483 appearing



Canonical link: https://commits.webkit.org/38056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46446 268f45cc-cd09-0410-ab3c-d52691b4dbfc